--- a/.gitignore
+++ b/.gitignore
@@ -3,18 +3,18 @@
 cmake-build-debug
 CMakeLists.txt
 
-main.cpp
-main.exe
-main.out
+/main.cpp
+/main.exe
+/main.out
 
-ans.cpp
-ans.exe
-ans.out
+/ans.cpp
+/ans.exe
+/ans.out
 
-generator.cpp
-generator.exe
+/generator.cpp
+/generator.exe
 
-judge.cpp
-judge.exe
+/judge.cpp
+/judge.exe
 
-e.in
+/e.in
